// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HibernateClusterModal /> renders correctly 1`] = `
<Modal
  aria-label="hibernate-cluster-modal"
  header={
    <HibernateClusterModalTitle
      title="Hibernate cluster"
    />
  }
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Close"
  titleIconVariant="danger"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <HibernateClusterContent
      clusterName="some-name"
      isHibernating={false}
    />
  </Form>
</Modal>
`;

exports[`<HibernateClusterModal /> renders correctly when an error occurs 1`] = `
<Modal
  aria-label="hibernate-cluster-modal"
  header={
    <HibernateClusterModalTitle
      title="Hibernate cluster"
    />
  }
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Close"
  titleIconVariant="danger"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <ErrorBox
      message="Error hibernating cluster"
      response={
        Object {
          "error": true,
          "errorMessage": "this is an error",
        }
      }
    />
    <HibernateClusterContent
      clusterName="some-name"
      isHibernating={false}
    />
  </Form>
</Modal>
`;

exports[`<HibernateClusterModal /> renders correctly when pending 1`] = `
<Modal
  aria-label="hibernate-cluster-modal"
  header={
    <HibernateClusterModalTitle
      title="Hibernate cluster"
    />
  }
  isPending={true}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Hibernate cluster"
  secondaryText="Close"
  titleIconVariant="danger"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <HibernateClusterContent
      clusterName="some-name"
      isHibernating={false}
    />
  </Form>
</Modal>
`;
